--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
-.social-wall-row-promotion {
-  display: none!important;
+@import url('https://fonts.googleapis.com/css?family=Darker+Grotesque&display=swap');
+
+body {
+  background: #54AFFE;
+  font-family: 'Darker Grotesque', sans-serif;
+  margin: 0;
+}
+
+#banner {
+  height: 600px;
+  overflow: hidden;
+}
+#banner img{
+  width: 100%;
+  
+}
+
+#menu {
+  background: rgba(250, 250, 250, 0.4);
+  height: 45px;
+  left: 0;
+  position: fixed;
+  text-align: center;
+  text-transform: uppercase;
+  top: 0;
+  transition: 1s;
+  width: 100%;
+}
+    
+li {
+  display: inline-block;
+  list-style: none;
+  padding: 0 10px;
+}
+
+#menu a {
+  color: black;
+  text-decoration: none;
+}
+
+#menu.scrolled {
+  background-color: #fff !important;
+  transition: background-color 200ms linear;
 }
