--- a/style.css
+++ b/style.css
@@ -37,3 +37,8 @@ li {
   color: black;
   text-decoration: none;
 }
+
+#menu.scrolled {
+  background-color: #fff !important;
+  transition: background-color 200ms linear;
+}
