--- a/style.css
+++ b/style.css
@@ -7,16 +7,13 @@ body {
 }
 
 #banner {
-  height: 600px;
+  background: url("memphis-mini.png");
+  height: 400px;
   overflow: hidden;
-}
-#banner img{
-  width: 100%;
-  
 }
 
 #menu {
-  background: rgba(250, 250, 250, 0.4);
+  background: black;
   height: 45px;
   left: 0;
   position: fixed;
@@ -34,11 +31,14 @@ li {
 }
 
 #menu a {
-  color: black;
+  border: 1px solid transparent;
+  color: white;
+  padding: 0 10px;
   text-decoration: none;
+  transition: 0.3s;
 }
 
-#menu.scrolled {
-  background-color: #fff !important;
-  transition: background-color 200ms linear;
+#menu a:hover {
+  border: 1px solid white;
+  color: gray;
 }
